# imgrenderer

./: .gitignore  CMakeLists.txt
include/: imgrenderer.h
src/: first.c  imgrenderer.c
